Add Printify API integration scripts and fix sync workflow - Created sync_printify.js to fetch products from Printify API - Created test_printify.js to verify API connection and get Shop ID - Added package.json with dotenv dependency - Updated printify-sync.yml workflow to use new sync script - Created .env file from template for local development - Fixes: Printify integration was using placeholder data

--- a/.github/workflows/printify-sync.yml
+++ b/.github/workflows/printify-sync.yml
@@ -26,9 +26,7 @@ jobs:
           PRINTIFY_SHOP_ID: ${{ secrets.PRINTIFY_SHOP_ID }}
         run: |
           echo "🔄 Syncing Printify products..."
-          # Future: Add Node.js script to fetch Printify API and update data/brands.json
-          # For now, manual updates required
-          echo "ℹ️ Manual sync required - add Printify API integration script"
+          node scripts/sync_printify.js
       
       - name: Commit and Push
         run: |
