Fix Printify workflow - Add npm install step for dotenv dependency

--- a/.github/workflows/printify-sync.yml
+++ b/.github/workflows/printify-sync.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: '20'
       
+      - name: Install Dependencies
+        run: npm install
+      
       - name: Sync Printify Products
         env:
           PRINTIFY_API_KEY: ${{ secrets.PRINTIFY_API_KEY }}
